--- a/.github/workflows/zip-quick.yaml
+++ b/.github/workflows/zip-quick.yaml
@@ -9,10 +9,10 @@ on:
   workflow_dispatch: {}
 
 env:
-  OCTOPUS_URL: https://your.octopus.app
-  OCTOPUS_SERVICE_ACCOUNT: service account id
-  OCTOPUS_SPACE: Your space
-  PACKAGE_ID: YourApp
+  OCTOPUS_URL: https://demo.octopus.app
+  OCTOPUS_SERVICE_ACCOUNT: 4d50c8ac-1515-4351-96a7-4a82d55d55ff
+  OCTOPUS_SPACE: TechCon
+  PACKAGE_ID: TransferVerification
 
 jobs:
   build:
