--- a/.github/workflows/zip-slsa.yaml
+++ b/.github/workflows/zip-slsa.yaml
@@ -7,13 +7,15 @@ on:
   #  branches:
   #    - main
   workflow_dispatch: {}
+  schedule:
+    - cron: "33 13-22 * * 1-5"
 
 env:
-  OCTOPUS_URL: https://your.octopus.app
-  OCTOPUS_SERVICE_ACCOUNT: service account id
-  OCTOPUS_SPACE: Your space
-  PACKAGE_ID: YourApp
-  SBOM_PACKAGE: YourApp.SBOM
+  OCTOPUS_URL: https://demo.octopus.app
+  OCTOPUS_SERVICE_ACCOUNT: 4d50c8ac-1515-4351-96a7-4a82d55d55ff
+  OCTOPUS_SPACE: TechCon
+  PACKAGE_ID: TransferVerification
+  SBOM_PACKAGE: TransferVerification.SBOM
 
 jobs:
   configure:
